--- a/OnePageWhite/style.css
+++ b/OnePageWhite/style.css
@@ -1,5 +1,7 @@
 
-/*<!-- CSS -------------------->*/
+
+
+/*<!-- CSS Global -------------------->*/
 
 html, body {
   height: 100%;
@@ -72,7 +74,6 @@ html, body {
   background-color: red;
 
 }
-
 
 /*<!-- ABOUT -------------------->*/
 
@@ -164,88 +165,3 @@ html, body {
 
 /*-- THE END--------------------*/
 
-
-
-
-/*<!-- CSS  ABSOLUT-------------------->*/
-/**{
-  margin:0;
-  padding: 0;
-  font-family: Arial;
-}
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}*/
-
-/*<!---------------------->*/
-
-
-
-/*<!-- CSS - BODY ------------------->*/
-
-
-/*<!-- MENU -------------------->*/
-
-
-
-
-/*<!-- MENU END-------------------->*/
-
-
-
-
-/*<!-- container 1-------------------->*/
-
-/*<!-- container 2-------------------->*/
-
-/*<!-- container 3-------------------->*/
-
-/*<!-- container 4-------------------->*/
-
-/*<!-- container 5-------------------->*/
-
-/*<!-- CSS - BODY END------------------->*/
-
-
-
-/*-- FOOTER --------------------*/
-
-
-/*-- FOOTER END--------------------*/
-
-/*-- THE END--------------------*/
-
-
-
-
-
-/*  MEDIA SCREEN ----------------------------- */
-
-/*  Media screen 1100----------------------------- */
-
-/*@media screen and (max-width:1100px){
-
-}*/
-
-
-
-/*  Media screen 768----------------------------- */
-
-/*@media screen and (max-width:768px){
-
-}*/
-
-
-/*  Media screen 400----------------------------- */
-
-/*@media screen and (max-width:400px){
-
-}*/
-
-/*  Media screen   THE END----------------------------- */
-
-
-/*<!-- THE END SITE-------------------->*/
